--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,14 +3,29 @@
           package="com.example"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="12"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
+
+
+        </activity>
+        <activity android:name="login.DisplayLoginActivity"
+                  android:label="LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+        </activity>
+        <activity android:name="roster.DisplayRosterActivity"
+                  android:label="RosterActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="Log.DisplayLoginActivity"/>
+
         </activity>
     </application>
 </manifest>
