Some UI Changes

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
         </activity>
         <activity android:name="login.DisplayLoginActivity"
-                  android:label="LoginActivity">
+                  android:label="LoginActivity"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -21,7 +22,8 @@
 
         </activity>
         <activity android:name="roster.DisplayRosterActivity"
-                  android:label="RosterActivity">
+                  android:label="RosterActivity"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="Log.DisplayLoginActivity"/>
