--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,14 @@
                     android:value="Log.DisplayLoginActivity"/>
 
         </activity>
+        <activity android:name="accounts.DisplayAccountsActivity"
+                  android:label="AccountsActivity"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="Log.DisplayAccountsActivity"/>
+
+        </activity>
         <activity
                 android:name="message.MessageActivity"
                 android:label="MessageActivity" >
