--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,14 +6,14 @@
     <uses-sdk android:minSdkVersion="12"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/oldvartalaap">
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
 
 
         </activity>
         <activity android:name="login.DisplayLoginActivity"
-                  android:label="LoginActivity"
+                  android:label="Vartalaap"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,7 +23,8 @@
         </activity>
         <activity android:name="roster.DisplayRosterActivity"
                   android:label="RosterActivity"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:launchMode="singleTask">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="Log.DisplayLoginActivity"/>
@@ -31,7 +32,8 @@
         </activity>
         <activity android:name="accounts.DisplayAccountsActivity"
                   android:label="AccountsActivity"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:launchMode="singleTask">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="Log.DisplayAccountsActivity"/>
